fix(App): toastContainer z-index changed

--- a/src/components/general/ToastContainerComponent/ToastContainerComponent.css
+++ b/src/components/general/ToastContainerComponent/ToastContainerComponent.css
@@ -6,7 +6,7 @@
     left: 0;
     right: 0;
     top: 0;
-    z-index: 1031;
+    z-index: 1056;
     padding-top: 80px;
     box-sizing: border-box;
 }
